--- a/test/monnaie.tex
+++ b/test/monnaie.tex
@@ -1,4 +1,4 @@
-\documentclass[10pt,a4paper,onecolumn]{article}
+\documentclass[tikz,10pt,a4paper,onecolumn]{article}
 \usepackage[francais]{babel}
 \usepackage[margin=2cm]{geometry}
 \usepackage[T1]{fontenc}
@@ -7,7 +7,7 @@
 \usepackage{amssymb}
 \usepackage{listings}
 \usepackage{graphicx}
-\usepackage{pstricks}
+\usepackage{tikz}
 
 \lstset{
   language=Java,
@@ -27,7 +27,7 @@
 \maketitle
 
 \begin{abstract}
-Etude d'algorithmes capables de faire l'appoint avec le moins de pièces possibles.
+Etude d'algorithmes \tikz \fill[orange] (1ex,1ex) circle (1ex); capables de faire l'appoint avec le moins de pièces possibles.
 \end{abstract}
 
 \section{L'algorithme glouton}
